Database access for notes allowed

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -2,8 +2,8 @@
 <resources>
     <color name="background">#121212</color>
     <color name="onBackground">#272727</color>
-    <color name="accent_orange_light">#F2613F</color>
-    <color name="accent_orange_medium">#9B3922</color>
-    <color name="accent_orange_dark">#481E14</color>
+    <color name="accent_1">#F2613F</color>
+    <color name="accent_2">#9B3922</color>
+    <color name="accent_3">#481E14</color>
     <color name="secondary">#ffffff</color>
 </resources>
