--- a/app/src/main/res/layout/main_card_cell.xml
+++ b/app/src/main/res/layout/main_card_cell.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     xmlns:app="http://schemas.android.com/apk/res-auto">
@@ -9,12 +10,11 @@
         app:cardBackgroundColor="@color/accent_2"
         android:layout_height="290dp"
         android:layout_margin="10dp"
-        android:clickable="true"
-        android:focusable="true"
+
         app:cardCornerRadius="30dp"
         app:cardElevation="7dp">
 
-        <LinearLayout
+        <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:orientation="vertical"
@@ -26,15 +26,33 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text="This is dummy"
-                android:textSize="40sp" />
+                android:textSize="25sp"
+                android:textStyle="bold"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent" />
 
             <TextView
                 android:id="@+id/card_note_body"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="30dp"
-                android:text="sdbfhkjdsbfhjbskhbvkdsbvjdsbkcjvbcskjsxvbkcjxbvkjcbxkjvbxckjbvkjxcbvkjxcbvk"
-                android:textSize="20sp" />
-        </LinearLayout>
+                android:text="This is dummy"
+                android:textSize="15sp"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/card_note_title" />
+
+            <android.widget.Button
+                android:id="@+id/delete_button"
+                android:layout_width="37dp"
+                android:layout_height="36dp"
+                android:layout_marginBottom="0dp"
+                android:background="@drawable/baseline_delete_24"
+                android:backgroundTint="@color/background"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintHorizontal_bias="0.501"
+                app:layout_constraintStart_toStartOf="parent" />
+        </androidx.constraintlayout.widget.ConstraintLayout>
     </androidx.cardview.widget.CardView>
 </LinearLayout>
