--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -15,7 +15,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="13dp"
         android:padding="8dp"
-        app:layout_constraintTop_toBottomOf="@+id/searchView"
+        app:layout_constraintTop_toBottomOf="@+id/seachBar"
         tools:layout_editor_absoluteX="16dp">
 
         <LinearLayout
@@ -39,7 +39,7 @@
     </HorizontalScrollView>
 
     <android.widget.SearchView
-        android:id="@+id/searchView"
+        android:id="@+id/seachBar"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginHorizontal="10dp"
