folder delete allowed

--- a/app/src/main/res/layout/activity_quiz_main.xml
+++ b/app/src/main/res/layout/activity_quiz_main.xml
@@ -10,7 +10,7 @@
         android:id="@+id/textView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Choose an option"
+        android:text="@string/choose_an_option"
         android:textColor="@android:color/white"
         android:textSize="20sp"
         android:textStyle="bold"
@@ -28,7 +28,7 @@
         android:background="@drawable/rounded_rectangle"
         android:backgroundTint="@color/accent_1"
         android:paddingHorizontal="10dp"
-        android:text="Start new Quiz"
+        android:text="@string/start_new_quiz"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView" />
@@ -41,7 +41,7 @@
         android:background="@drawable/rounded_rectangle"
         android:backgroundTint="@color/accent_1"
         android:paddingHorizontal="10dp"
-        android:text="View previous "
+        android:text="@string/view_previous"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.498"
         app:layout_constraintStart_toStartOf="parent"
