--- a/app/src/main/res/layout/activity_profile_update.xml
+++ b/app/src/main/res/layout/activity_profile_update.xml
@@ -13,7 +13,7 @@
             android:layout_height="wrap_content"
             android:layout_gravity="center_horizontal"
             android:layout_marginTop="48dp"
-            android:text="Profile"
+            android:text="@string/profile"
             android:textColor="@android:color/white"
             android:textSize="24sp"
             app:layout_constraintEnd_toEndOf="parent"
@@ -27,7 +27,7 @@
             android:layout_marginHorizontal="30dp"
             android:layout_marginTop="60dp"
             android:background="@android:color/transparent"
-            android:hint="Username"
+            android:hint="@string/username"
             android:inputType="text"
             android:paddingVertical="10dp"
             android:textAlignment="center"
@@ -42,7 +42,7 @@
             android:layout_marginHorizontal="30dp"
             android:layout_marginTop="20dp"
             android:background="@android:color/transparent"
-            android:hint="Password"
+            android:hint="@string/password"
             android:inputType="text"
             android:paddingVertical="10dp"
             android:textAlignment="center"
@@ -57,7 +57,7 @@
             android:layout_marginHorizontal="30dp"
             android:layout_marginTop="20dp"
             android:background="@android:color/transparent"
-            android:hint="Re Password"
+            android:hint="@string/re_password"
             android:inputType="text"
             android:paddingVertical="10dp"
             android:textAlignment="center"
@@ -72,7 +72,7 @@
             android:layout_marginHorizontal="30dp"
             android:layout_marginTop="20dp"
             android:background="@android:color/transparent"
-            android:hint="Full Name"
+            android:hint="@string/full_name"
             android:inputType="text"
             android:paddingVertical="10dp"
             android:textAlignment="center"
@@ -87,7 +87,7 @@
             android:layout_marginTop="28dp"
             android:background="@drawable/rounded_rectangle"
             android:backgroundTint="@color/accent_1"
-            android:text="Save"
+            android:text="@string/save"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.498"
             app:layout_constraintStart_toStartOf="parent"
@@ -100,7 +100,7 @@
             android:layout_marginTop="24dp"
             android:background="@drawable/rounded_rectangle"
             android:backgroundTint="@color/accent_1"
-            android:text="Logout"
+            android:text="@string/logout"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.498"
             app:layout_constraintStart_toStartOf="parent"
@@ -113,7 +113,7 @@
             android:layout_marginTop="28dp"
             android:background="@drawable/rounded_rectangle"
             android:backgroundTint="@android:color/holo_red_dark"
-            android:text="Delete Account"
+            android:text="@string/delete_account"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.498"
             app:layout_constraintStart_toStartOf="parent"
